# Ascala03

./: .gitignore  README.md  WIRING_PLAN.md  dev.sh
backend/: README.md  app.py  pyproject.toml
backend/persona_report/: PLAN.md  __init__.py  _llm_helpers.py  counterfactuals.py  distributions.py  errors.py  exec_summary.py  filters.py  fixes.py  generator.py  outcomes.py  predictions.py  run.py  schema.py  severity.py  stats.py  summaries.py
backend/persona_report/prompts/: draft_fix.md  exec_summary.md  test_type_summary.md
backend/persona_report/tests/: conftest.py  test_counterfactuals_outcomes.py  test_distributions.py  test_filters.py  test_fix_prompt_format.py  test_live.py  test_report.py  test_severity.py
backend/persona_simulation/: PLAN.md  __init__.py  _llm_helpers.py  categorize.py  decisions.py  errors.py  forking.py  metrics.py  report.py  run.py  runner.py  sampling.py  schema.py  screen_graph.py
backend/persona_simulation/prompts/: agent_decision.md  build_screen_graph.md  categorize_issues.md  seed_backstory.md  simulation_report.md
backend/persona_simulation/tests/: conftest.py  test_agent_step.py  test_fork_logic.py  test_live.py  test_report.py  test_runner_budget.py  test_sampling.py  test_screen_graph.py
backend/persona_synthesis/: __init__.py  errors.py  schema.py  synthesize.py
backend/persona_synthesis/llm/: __init__.py  anthropic_client.py  base.py
backend/persona_synthesis/parsers/: __init__.py  base.py  csv.py  image.py  pdf.py  text.py
backend/prompts/: persona_synthesis.md  summarize_chat.md  summarize_files.md
backend/tests/: conftest.py  test_live.py  test_parsers.py  test_schema.py  test_summarizers.py  test_synthesize.py
server/: README.md  main.py  mocks.py  pyproject.toml  runs.py  storage.py  workers.py
server/mocks/: mock_synthesis_result.json
(+36 files in other folders)
