[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ascala-persona-synthesis"
version = "0.1.0"
description = "Persona synthesis backend for Ascala — turns raw context into 3 behavioral PersonaGroups via Claude."
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.39.0",
    "pydantic>=2.6",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "python-multipart>=0.0.9",
    "pypdf>=4.0",
    "pandas>=2.1",
    "pillow>=10.1",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
]

[tool.setuptools.packages.find]
include = ["persona_synthesis*", "persona_simulation*", "persona_report*"]

[tool.pytest.ini_options]
testpaths = ["tests", "persona_simulation/tests", "persona_report/tests"]
markers = [
    "live: hits the real Anthropic API (requires ANTHROPIC_API_KEY); skipped by default",
]
addopts = "-m 'not live'"
filterwarnings = [
    # Screen.copy legitimately shadows BaseModel.copy; harmless in pydantic v2
    "ignore:Field name \"copy\" in \"Screen\" shadows an attribute in parent \"BaseModel\":UserWarning",
]
